--- a/index.html
+++ b/index.html
@@ -37,7 +37,6 @@
 
   <!-- GA4 property ID G-ZTN7H3L6DV preserved verbatim -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZTN7H3L6DV"></script>
-  <script src="/assets/js/analytics.js"></script>
 
   <script type="application/ld+json">
   {"@context":"https://schema.org","@type":"WebSite","name":"Stack Pick","description":"Gaming loadouts built like streetwear drops. Curated hardware kits for UK gamers.","url":"https://stackpick.co.uk"}
@@ -134,6 +133,7 @@
       <!-- Patches rendered by wall.js from collections.js -->
     </div>
     <div class="patch-preview" id="patch-preview" aria-hidden="true" aria-live="polite">
+      <div class="patch-preview__header" id="patch-preview-header" aria-hidden="true"></div>
       <div class="patch-preview__cards" id="patch-preview-cards">
         <!-- 3 mini cards injected on 300ms long-press -->
       </div>
