--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
   <meta property="og:title" content="Stack Pick — Build Your Loadout | UK Gaming Hardware">
   <meta property="og:description" content="Hardware, styled like drops. Curated kits, not spreadsheets. Built for UK gamers.">
   <meta property="og:image" content="https://stackpick.co.uk/assets/images/og-image.jpg">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Stack Pick — Build Your Loadout | UK Gaming Hardware">
+  <meta name="twitter:description" content="Hardware, styled like drops. Curated kits, not spreadsheets. Built for UK gamers.">
+  <meta name="twitter:image" content="https://stackpick.co.uk/assets/images/og-image.jpg">
   <title>Stack Pick — Build Your Loadout | UK Gaming Hardware</title>
   <meta name="author" content="Stack Pick">
   <link rel="canonical" href="https://stackpick.co.uk/">
@@ -39,7 +43,21 @@
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZTN7H3L6DV"></script>
 
   <script type="application/ld+json">
-  {"@context":"https://schema.org","@type":"WebSite","name":"Stack Pick","description":"Gaming loadouts built like streetwear drops. Curated hardware kits for UK gamers.","url":"https://stackpick.co.uk"}
+  {
+    "@context": "https://schema.org",
+    "@type": "WebSite",
+    "name": "Stack Pick",
+    "description": "Gaming loadouts built like streetwear drops. Curated hardware kits for UK gamers.",
+    "url": "https://stackpick.co.uk",
+    "potentialAction": {
+      "@type": "SearchAction",
+      "target": {
+        "@type": "EntryPoint",
+        "urlTemplate": "https://stackpick.co.uk/search/?q={search_term_string}"
+      },
+      "query-input": "required name=search_term_string"
+    }
+  }
   </script>
 </head>
 
@@ -47,6 +65,14 @@
 
   <!-- SKIP LINK -->
   <a href="#wall" class="skip-link">Skip to loadout wall</a>
+  
+  <noscript>
+    <div style="font-family:sans-serif;padding:2rem;text-align:center;color:#F2F0EB;background:#0A0A0F;min-height:100vh;">
+      <p style="font-size:1.5rem;font-weight:700;margin-bottom:1rem;">⚡ StackPick</p>
+      <p style="margin-bottom:1.5rem;color:rgba(242,240,235,0.6);">JavaScript is required to run the loadout wall. Browse by category instead:</p>
+      <p><a href="/headsets/" style="color:#C8FF00;margin:0 0.75rem;">Headsets</a><a href="/keyboards/" style="color:#C8FF00;margin:0 0.75rem;">Keyboards</a><a href="/mice/" style="color:#C8FF00;margin:0 0.75rem;">Mice</a><a href="/monitors/" style="color:#C8FF00;margin:0 0.75rem;">Monitors</a><a href="/chairs/" style="color:#C8FF00;margin:0 0.75rem;">Chairs</a></p>
+    </div>
+  </noscript>
 
 
   <!-- ═══════════════════════════════════════════════════════════
@@ -58,7 +84,8 @@
   <header class="persona-strip" id="persona-strip" role="banner">
 
     <div class="persona-strip__left">
-      <div class="locator-pill" id="locator-pill" aria-label="Region: United Kingdom">
+      <span class="persona-strip__logo" aria-label="Stack Pick">SP</span>
+      <div class="locator-pill" id="locator-pill" aria-label="Region: United Kingdom" aria-hidden="true">
         <span class="locator-pill__dot" aria-hidden="true"></span>
         <span class="locator-pill__text">Tuned for: <strong>UK</strong></span>
       </div>
@@ -84,6 +111,8 @@
   </header>
 
 
+
+
   <!-- ═══════════════════════════════════════════════════════════
        PREFERENCES SIDE SHEET
        ═══════════════════════════════════════════════════════════ -->
@@ -93,32 +122,37 @@
     <h2 class="prefs-sheet__title">Your Preferences</h2>
     <div class="prefs-sheet__body">
       <div class="pref-row">
-        <span class="pref-row__label">Region</span>
-        <span class="pref-row__value">🇬🇧 UK</span>
+        <span class="pref-row__label">Local Feed</span>
+        <span class="pref-row__value"><span class="locator-pill__dot"></span> UK / LIVE</span>
       </div>
       <div class="pref-row">
-        <span class="pref-row__label">Budget</span>
-        <span class="pref-row__value">All ranges</span>
+        <span class="pref-row__label">Currency</span>
+        <span class="pref-row__value">GBP (£)</span>
       </div>
       <div class="pref-row">
-        <span class="pref-row__label">Affiliate</span>
-        <span class="pref-row__value">Amazon UK ✓</span>
+        <span class="pref-row__label">Supply Line</span>
+        <span class="pref-row__value">Amazon UK Verified</span>
       </div>
       <div class="pref-row">
-        <span class="pref-row__label">Theme</span>
-        <span class="pref-row__value" id="pref-theme-val">Dark</span>
+        <span class="pref-row__label">Visual Mode</span>
+        <span class="pref-row__value" id="pref-theme-val">Onyx (Dark)</span>
       </div>
     </div>
+
     <nav class="prefs-sheet__links" aria-label="Site navigation">
-      <a href="/headsets/" class="prefs-sheet__nav-link">Browse Headsets →</a>
-      <a href="/keyboards/" class="prefs-sheet__nav-link">Browse Keyboards →</a>
-      <a href="/mice/" class="prefs-sheet__nav-link">Browse Mice →</a>
-      <a href="/monitors/" class="prefs-sheet__nav-link">Browse Monitors →</a>
-      <a href="/chairs/" class="prefs-sheet__nav-link">Browse Chairs →</a>
-      <a href="/guides/" class="prefs-sheet__nav-link">Setup Guides →</a>
-      <a href="/comparisons/" class="prefs-sheet__nav-link">Comparisons →</a>
-      <a href="/about/" class="prefs-sheet__nav-link">About StackPick →</a>
+      <div class="prefs-sheet__nav-group">Hardware Categories</div>
+      <a href="/headsets/" class="prefs-sheet__nav-link">Audio Gear</a>
+      <a href="/keyboards/" class="prefs-sheet__nav-link">Input Decks</a>
+      <a href="/mice/" class="prefs-sheet__nav-link">Pointing Devices</a>
+      <a href="/monitors/" class="prefs-sheet__nav-link">Visual Arrays</a>
+      <a href="/chairs/" class="prefs-sheet__nav-link">Seating</a>
+      <div class="prefs-sheet__nav-group">Resources</div>
+      <a href="/guides/" class="prefs-sheet__nav-link">Assembly Guides</a>
+      <a href="/comparisons/" class="prefs-sheet__nav-link">Spec Shootouts</a>
+      <a href="/search/" class="prefs-sheet__nav-link">Search</a>
+      <a href="/about/" class="prefs-sheet__nav-link">The Manifesto</a>
     </nav>
+
     <button class="prefs-sheet__close" id="prefs-close" aria-label="Close preferences">✕</button>
   </aside>
   <div class="prefs-sheet__overlay" id="prefs-overlay" aria-hidden="true" tabindex="-1"></div>
@@ -148,9 +182,9 @@
        ZONE 2B: PATCH RAIL — Desktop fixed left column
        ═══════════════════════════════════════════════════════════ -->
   <aside class="patch-rail" id="patch-rail" aria-label="Browse collections" role="navigation">
-    <div class="patch-rail__logo" aria-label="Stack Pick">
+    <a href="/" class="patch-rail__logo" aria-label="Stack Pick — Home">
       <span class="patch-rail__logo-text">SP</span>
-    </div>
+    </a>
     <div class="patch-rail__track" id="patch-rail-track" role="list" aria-label="Collection patches">
       <!-- Patches rendered by wall.js -->
     </div>
@@ -170,7 +204,7 @@
     <!-- Pull-to-shuffle gesture zone -->
     <div class="shuffle-trigger" id="shuffle-trigger" aria-hidden="true" role="presentation">
       <div class="shuffle-trigger__ring-wrap">
-        <svg class="shuffle-trigger__svg" viewBox="0 0 40 40">
+        <svg class="shuffle-trigger__ring-svg" viewBox="0 0 40 40">
           <circle class="shuffle-trigger__track" cx="20" cy="20" r="18" fill="none" stroke-width="3"></circle>
           <circle class="shuffle-trigger__arc" id="shuffle-trigger-arc" cx="20" cy="20" r="18" fill="none" stroke-width="3" stroke-dasharray="113.1" stroke-dashoffset="113.1"></circle>
         </svg>
@@ -189,8 +223,7 @@
         <span class="shuffle-banner__dice" id="shuffle-banner-dice" aria-hidden="true">🎲</span>
         <div class="shuffle-banner__meta">
           <span class="shuffle-banner__text" id="shuffle-banner-text">Shuffled picks</span>
-          <div class="shuffle-banner__dots" id="shuffle-banner-dots">
-            </div>
+          <div class="shuffle-banner__dots" id="shuffle-banner-dots"></div>
         </div>
       </div>
       <button class="shuffle-banner__reset" id="shuffle-reset" aria-label="Reset to default collection">Reset</button>
@@ -202,7 +235,7 @@
       <div class="wall__header-left">
         <span class="wall__collection-emoji" id="wall-collection-emoji" aria-hidden="true">🏴</span>
         <span class="wall__collection-label" id="wall-collection-label">ALL PICKS</span>
-        <span class="wall__count" id="wall-count" aria-live="polite">25 items</span>
+        <span class="wall__count" id="wall-count" aria-live="polite"></span>
       </div>
       <div class="wall__header-right">
         <button class="wall__sort-btn" id="wall-sort"
@@ -251,8 +284,8 @@
          role="button" tabindex="0" aria-pressed="true" aria-label="Browse products">
       <div class="rack-box__lip" aria-hidden="true"></div>
       <div class="rack-box__face">
-        <span class="rack-box__icon" aria-hidden="true">🧱</span>
-        <span class="rack-box__label">Browse</span>
+        <span class="rack-box__icon" aria-hidden="true">▤</span>
+        <span class="rack-box__label">The Wall</span>
       </div>
     </div>
 
@@ -260,8 +293,8 @@
          role="button" tabindex="0" aria-pressed="false" aria-label="View loadout guides">
       <div class="rack-box__lip" aria-hidden="true"></div>
       <div class="rack-box__face">
-        <span class="rack-box__icon" aria-hidden="true">🗂️</span>
-        <span class="rack-box__label">Loadouts</span>
+        <span class="rack-box__icon" aria-hidden="true">◎</span>
+        <span class="rack-box__label">Kits</span>
       </div>
     </div>
 
@@ -269,10 +302,11 @@
          role="button" tabindex="0" aria-pressed="false" aria-label="New drops and comparisons">
       <div class="rack-box__lip" aria-hidden="true"></div>
       <div class="rack-box__face">
-        <span class="rack-box__icon" aria-hidden="true">⚡</span>
-        <span class="rack-box__label">Drops</span>
+        <span class="rack-box__icon" aria-hidden="true">✦</span>
+        <span class="rack-box__label">Latest</span>
       </div>
     </div>
+
 
     <div class="rack-box" data-tab="profile"
          role="button" tabindex="0" aria-pressed="false" aria-label="Preferences and settings">
