--- a/comparisons/logitech-superlight-2-vs-razer-viper-v3-pro/index.html
+++ b/comparisons/logitech-superlight-2-vs-razer-viper-v3-pro/index.html
@@ -32,7 +32,7 @@
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,300;0,9..40,400;0,9..40,500;0,9..40,600;0,9..40,700;1,9..40,400&family=DM+Mono:wght@400;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/assets/css/style.css">
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZTN7H3L6DV"></script>
-    <script src="/assets/js/analytics.js"></script>
+    <script src="/assets/js/analytics.js" defer></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Article","headline":"Logitech G Pro X Superlight 2 vs Razer Viper V3 Pro","description":"Head-to-head comparison of the two best wireless gaming mice for UK gamers.","url":"https://stackpick.co.uk/comparisons/logitech-superlight-2-vs-razer-viper-v3-pro/","author":{"@type":"Organization","name":"Stack Pick","url":"https://stackpick.co.uk"},"publisher":{"@type":"Organization","name":"Stack Pick","url":"https://stackpick.co.uk"},"datePublished":"2026-02-17","dateModified":"2026-02-17"}
     </script>
@@ -356,7 +356,5 @@
     </nav>
 
     <script src="/assets/js/app.js" defer></script>
-    <script> document.querySelectorAll('.price-current').forEach(function(el) {     if (!el.querySelector('.price-badge')) {         var badge = document.createElement('span');         badge.className = 'price-badge';         badge.textContent = 'Checked Feb 2026';         el.appendChild(badge);     } }); 
-    </script> 
 </body>
 </html>
