--- a/monitors/index.html
+++ b/monitors/index.html
@@ -27,7 +27,7 @@
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,300;0,9..40,400;0,9..40,500;0,9..40,600;0,9..40,700;1,9..40,400&family=DM+Mono:wght@400;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/assets/css/style.css">
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZTN7H3L6DV"></script>
-    <script src="/assets/js/analytics.js"></script>
+    <script src="/assets/js/analytics.js" defer></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"ItemList","name":"Best Gaming Monitors UK 2026","url":"https://stackpick.co.uk/monitors/","numberOfItems":5,"itemListElement":[{"@type":"ListItem","position":1,"item":{"@type":"Product","name":"ASUS ROG Strix OLED XG27AQDMG","offers":{"@type":"Offer","priceCurrency":"GBP","price":"429.00","availability":"https://schema.org/InStock"}}},{"@type":"ListItem","position":2,"item":{"@type":"Product","name":"AOC Gaming 24G4XE","offers":{"@type":"Offer","priceCurrency":"GBP","price":"109.97","availability":"https://schema.org/InStock"}}},{"@type":"ListItem","position":3,"item":{"@type":"Product","name":"Samsung Odyssey G80SD","offers":{"@type":"Offer","priceCurrency":"GBP","price":"740.30","availability":"https://schema.org/InStock"}}},{"@type":"ListItem","position":4,"item":{"@type":"Product","name":"AOC Q27G3XMN Mini-LED","offers":{"@type":"Offer","priceCurrency":"GBP","price":"293.99","availability":"https://schema.org/InStock"}}},{"@type":"ListItem","position":5,"item":{"@type":"Product","name":"MSI MAG 274UPDF E16M","offers":{"@type":"Offer","priceCurrency":"GBP","price":"398.97","availability":"https://schema.org/InStock"}}}]}
     </script>
@@ -313,7 +313,6 @@
     </nav>
 
     <script src="/assets/js/app.js" defer></script>
-    <script> document.querySelectorAll('.price-current').forEach(function(el) {     if (!el.querySelector('.price-badge')) {         var badge = document.createElement('span');         badge.className = 'price-badge';         badge.textContent = 'Checked Feb 2026';         el.appendChild(badge);     } }); 
-    </script> 
+    
 </body>
 </html>
