--- a/offline.html
+++ b/offline.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="theme-color" content="#3B82F6">
+    <meta name="theme-color" content="#C8FF00">
     <meta name="robots" content="noindex">
     <title>You're offline — Stack Pick</title>
     <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🎮</text></svg>">
@@ -17,7 +17,7 @@
             --bg-secondary:     #F8FAFC;
             --text-primary:     #0F172A;
             --text-secondary:   #64748B;
-            --accent-primary:   #3B82F6;
+            --accent-primary:   #C8FF00;
             --accent-secondary: #8B5CF6;
             --border-color:     #E2E8F0;
         }
@@ -356,7 +356,6 @@
     })();
     </script>
 
-    <script> document.querySelectorAll('.price-current').forEach(function(el) {     if (!el.querySelector('.price-badge')) {         var badge = document.createElement('span');         badge.className = 'price-badge';         badge.textContent = 'Checked Feb 2026';         el.appendChild(badge);     } }); 
-    </script> 
+    
 </body>
 </html>
