--- a/comparisons/steelseries-arctis-nova-pro-vs-sony-inzone-h9/index.html
+++ b/comparisons/steelseries-arctis-nova-pro-vs-sony-inzone-h9/index.html
@@ -38,7 +38,7 @@
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,300;0,9..40,400;0,9..40,500;0,9..40,600;0,9..40,700;1,9..40,400&family=DM+Mono:wght@400;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/assets/css/style.css">
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZTN7H3L6DV"></script>
-    <script src="/assets/js/analytics.js"></script>
+    <script src="/assets/js/analytics.js" defer></script>
 </head>
 <body>
 
@@ -264,7 +264,6 @@
         </ul>
     </nav>
     <script src="/assets/js/app.js" defer></script>
-    <script> document.querySelectorAll('.price-current').forEach(function(el) {     if (!el.querySelector('.price-badge')) {         var badge = document.createElement('span');         badge.className = 'price-badge';         badge.textContent = 'Checked Feb 2026';         el.appendChild(badge);     } }); 
-    </script> 
+    
 </body>
 </html>
