--- a/extras/index.html
+++ b/extras/index.html
@@ -35,7 +35,7 @@
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,300;0,9..40,400;0,9..40,500;0,9..40,600;0,9..40,700;1,9..40,400&family=DM+Mono:wght@400;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/assets/css/style.css">
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZTN7H3L6DV"></script>
-    <script src="/assets/js/analytics.js"></script>
+    <script src="/assets/js/analytics.js" defer></script>
     <style>
         .coming-hero-badge { display:inline-flex;align-items:center;gap:.4rem;background:rgba(59,130,246,.12);border:1px solid rgba(59,130,246,.3);color:var(--accent-primary);font-size:.78rem;font-weight:600;letter-spacing:.06em;text-transform:uppercase;padding:.3rem .8rem;border-radius:var(--radius-full);margin-bottom:1rem; }
         .coming-card { background:var(--card-bg);border:1px solid var(--border-color);border-radius:var(--radius-xl);padding:2rem;margin-bottom:2rem; }
@@ -126,7 +126,6 @@
         });
     }());
     </script>
-    <script> document.querySelectorAll('.price-current').forEach(function(el) {     if (!el.querySelector('.price-badge')) {         var badge = document.createElement('span');         badge.className = 'price-badge';         badge.textContent = 'Checked Feb 2026';         el.appendChild(badge);     } }); 
-    </script> 
+    
 </body>
 </html>
