--- a/headsets/index.html
+++ b/headsets/index.html
@@ -27,7 +27,7 @@
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,300;0,9..40,400;0,9..40,500;0,9..40,600;0,9..40,700;1,9..40,400&family=DM+Mono:wght@400;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/assets/css/style.css">
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZTN7H3L6DV"></script>
-    <script src="/assets/js/analytics.js"></script>
+    <script src="/assets/js/analytics.js" defer></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"ItemList","name":"Best Gaming Headsets UK 2026","itemListElement":[{"@type":"ListItem","position":1,"item":{"@type":"Product","name":"Sennheiser HD 560S","offers":{"@type":"Offer","priceCurrency":"GBP","price":"99.00"}}},{"@type":"ListItem","position":2,"item":{"@type":"Product","name":"SteelSeries Arctis Nova Pro Wireless","offers":{"@type":"Offer","priceCurrency":"GBP","price":"289.00"}}},{"@type":"ListItem","position":3,"item":{"@type":"Product","name":"HyperX Cloud III S Wireless","offers":{"@type":"Offer","priceCurrency":"GBP","price":"129.97"}}},{"@type":"ListItem","position":4,"item":{"@type":"Product","name":"Bose QuietComfort Ultra (Gen 2)","offers":{"@type":"Offer","priceCurrency":"GBP","price":"399.95"}}},{"@type":"ListItem","position":5,"item":{"@type":"Product","name":"ASTRO A10 Gen 2","offers":{"@type":"Offer","priceCurrency":"GBP","price":"40.10"}}}]}
     </script>
@@ -318,7 +318,6 @@
     </nav>
 
     <script src="/assets/js/app.js" defer></script>
-    <script> document.querySelectorAll('.price-current').forEach(function(el) {     if (!el.querySelector('.price-badge')) {         var badge = document.createElement('span');         badge.className = 'price-badge';         badge.textContent = 'Checked Feb 2026';         el.appendChild(badge);     } }); 
-    </script> 
+    
 </body>
 </html>
