--- a/mice/index.html
+++ b/mice/index.html
@@ -27,7 +27,7 @@
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,300;0,9..40,400;0,9..40,500;0,9..40,600;0,9..40,700;1,9..40,400&family=DM+Mono:wght@400;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/assets/css/style.css">
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZTN7H3L6DV"></script>
-    <script src="/assets/js/analytics.js"></script>
+    <script src="/assets/js/analytics.js" defer></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"ItemList","name":"Best Gaming Mice UK 2026","itemListElement":[{"@type":"ListItem","position":1,"item":{"@type":"Product","name":"Razer Viper V3 Pro","offers":{"@type":"Offer","priceCurrency":"GBP","price":"119.05"}}},{"@type":"ListItem","position":2,"item":{"@type":"Product","name":"Endgame Gear OP1w 4k v2","offers":{"@type":"Offer","priceCurrency":"GBP","price":"104.99"}}},{"@type":"ListItem","position":3,"item":{"@type":"Product","name":"Lamzu Thorn","offers":{"@type":"Offer","priceCurrency":"GBP","price":"92.08"}}}]}
     </script>
@@ -309,7 +309,6 @@
     </nav>
 
     <script src="/assets/js/app.js" defer></script>
-    <script> document.querySelectorAll('.price-current').forEach(function(el) {     if (!el.querySelector('.price-badge')) {         var badge = document.createElement('span');         badge.className = 'price-badge';         badge.textContent = 'Checked Feb 2026';         el.appendChild(badge);     } }); 
-    </script> 
+    
 </body>
 </html>
