--- a/_templates/_partials/bottom-nav.html
+++ b/_templates/_partials/bottom-nav.html
@@ -1,6 +1,6 @@
     <div class="more-panel-overlay" id="more-overlay"></div>
-    <div class="bottom-nav-more-panel" id="more-panel">
-      <p class="more-panel-title">All categories</p>
+    <div class="bottom-nav-more-panel" id="more-panel" role="navigation" aria-labelledby="more-btn">
+      <p class="more-panel-title" id="more-panel-title">All categories</p>
       <div class="more-panel-grid">
         <a href="/monitors/" class="more-panel-link"><span class="nav-icon">🖥️</span>Monitors</a>
         <a href="/chairs/" class="more-panel-link"><span class="nav-icon">🪑</span>Chairs</a>
