--- a/search/index.html
+++ b/search/index.html
@@ -277,13 +277,8 @@
                 <h1>Search Stack Pick</h1>
                 <div class="search-input-wrap">
                     <span class="search-icon" aria-hidden="true">🔍</span>
-                    <input
-                        type="search"
-                        id="search-input"
-                        class="search-input"
-                        placeholder="Headset, keyboard, setup guide…"
-                        aria-label="Search products and guides"
-                        autocomplete="off"
+                    <label for="search-input" class="visually-hidden">Search gaming gear and guides</label>
+                    <input type="text" id="search-input" placeholder="Search for headsets, mice, guides..." autocomplete="off">
                         autofocus
                     >
                     <button class="search-clear" id="search-clear" aria-label="Clear search">✕</button>
