--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-GB" data-theme="dark" data-collection="all-picks" data-shuffle-step="0">
 <head>
   <meta charset="UTF-8">
-  <meta name="google-site-verification" content="FeboAnqcLjlONS3xZMwC55zCneE0qAR33PYKEPIZeJg" />
+  <meta name="google-site-verification" content="FeboAnqcLjlONS3xZMwC55zCneE0qAR33PYKEPIZeJg">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
   <meta name="theme-color" content="#0A0A0F" media="(prefers-color-scheme: dark)">
   <meta name="theme-color" content="#F2F0EB" media="(prefers-color-scheme: light)">
