--- a/_templates/comparison.html
+++ b/_templates/comparison.html
@@ -5,9 +5,9 @@
       </div>
     </section>
 
-    <nav class="breadcrumb-bar" aria-label="Breadcrumb">
+    <div class="breadcrumb-bar">
       <div class="container" style="padding-top:0.75rem;padding-bottom:0.75rem;">
-        <ol class="breadcrumb-list">
+        <ol class="breadcrumb-list" aria-label="Breadcrumb">
           <li><a href="/">Home</a></li>
           <li aria-hidden="true" class="breadcrumb-sep">›</li>
           <li><a href="/comparisons/">Comparisons</a></li>
