--- a/speakers/index.html
+++ b/speakers/index.html
@@ -103,7 +103,7 @@
             <a href="/chairs/" class="more-panel-link"><span class="nav-icon">🪑</span>Chairs</a>
             <a href="/guides/" class="more-panel-link"><span class="nav-icon">📋</span>Guides</a>
             <a href="/comparisons/" class="more-panel-link"><span class="nav-icon">⚖️</span>Compare</a>
-            <a href="/about/" class="more-panel-link"><span class="nav-icon">ℹ️</span>About</a>             <a href="/search/" class="more-panel-link"><span class="nav-icon">🔍</span>Search</a>
+            <a href="/about/" class="more-panel-link"><span class="nav-icon">ℹ️</span>About</a>
             <a href="/search/" class="more-panel-link"><span class="nav-icon">🔍</span>Search</a>
             <a href="/pcs/" class="more-panel-link"><span class="nav-icon">💻</span>PCs</a>
             <a href="/desks/" class="more-panel-link"><span class="nav-icon">🪵</span>Desks</a>
